fix filter histories
