# middleware/continuePayment.js
@@ -5,18 +5,19 @@ const { book } = require('../models')
 const continuePayment = (req, res, next) => {
   const { code } = req.params; // Retrieve code from URL parameters
   const { code: queryCode } = req.query; // Retrieve code from query parameters
-  
+
   const bookingCode = code || queryCode; // Use the value from URL parameters if available, otherwise use the value from query parameters
 
   book.findOne({
     where: { booking_code: bookingCode }
   })
     .then((foundBook) => {
+      req.book = foundBook; // Menyimpan data booking yang ditemukan ke dalam objek req untuk digunakan di middleware atau router berikutnya
+      
       if (foundBook.seat_id !== null && foundBook.payment_status === false) {
-        req.book = foundBook; // Menyimpan data buku yang ditemukan ke dalam objek req untuk digunakan di middleware atau router berikutnya
         next();
       } else {
-        return res.status(400).json({ msg: 'Invalid payment details' });
+        return res.status(400).json({ msg: 'Invalid data' });
       }
     })
     .catch((error) => {
@@ -28,7 +29,7 @@ const paymentDeadline = async (req, res, next) => {
   const { createdAt } = req.book;
 
   const currentTime = moment();
-  const deadline = moment(createdAt).add(24, 'hours');
+  const deadline = moment(createdAt).add(1, 'hours');
 
   if (currentTime.isBefore(deadline)) {
     next();
